[gd_scene load_steps=3 format=3 uid="uid://dtjh7ox1kyry8"]

[ext_resource type="Script" uid="uid://dyrcsn8itlei1" path="res://Levels/Level Parts/player/yank_detector.gd" id="1_toqnn"]


[sub_resource type="CircleShape2D" id="CircleShape2D_toqnn"]
radius = 22.022715

[node name="YankDetector" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_toqnn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_toqnn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
